--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,13 +8,13 @@ h11==0.16.0
 httptools==0.6.4
 idna==3.10
 pydantic==2.10.6
-pydantic_core==2.27.2
+pydantic-core==2.27.2
 python-dotenv==1.0.1
-PyYAML==6.0.2
+pyyaml==6.0.2
 sniffio==1.3.1
 soupsieve==2.7
 starlette==0.44.0
-typing_extensions==4.13.2
+typing-extensions==4.13.2
 uvicorn==0.33.0
 uvloop==0.21.0
 watchfiles==0.24.0
