--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -15,4 +15,4 @@ COPY . .
 EXPOSE 8000
 
 # 6. Start the Uvicorn server
-CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
