--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ pydantic==2.10.6
 pydantic-core==2.27.2
 python-dotenv==1.0.1
 pyyaml==6.0.2
+requests==2.31.0
 sniffio==1.3.1
 soupsieve==2.7
 starlette==0.44.0
