--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@ annotated-types==0.7.0
 anyio==4.5.2
 beautifulsoup4==4.13.4
 click==8.1.8
-exceptiongroup==1.3.0
+exceptiongroup==3.3.0
 fastapi==0.116.1
 h11==0.16.0
 httptools==0.6.4
@@ -11,7 +11,7 @@ pydantic==2.10.6
 pydantic-core==2.27.2
 python-dotenv==1.0.1
 pyyaml==6.0.2
-requests==2.31.0
+requests==2.32.4
 sniffio==1.3.1
 soupsieve==2.7
 starlette==0.44.0
@@ -20,3 +20,7 @@ uvicorn==0.33.0
 uvloop==0.21.0
 watchfiles==0.24.0
 websockets==13.1
+
+# Additional libraries for Lighthouse parser and matcher
+lxml==6.0.0
+cssselect==1.2.0
