--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,21 +1,35 @@
-# 1. Use an official slim Python image
+# Use Python 3.10 with more system dependencies for PyTorch
 FROM python:3.10-slim
 
-# 2. Set working directory
+# Install system dependencies for PyTorch and image processing
+RUN apt-get update && apt-get install -y \
+    gcc \
+    g++ \
+    libglib2.0-0 \
+    libsm6 \
+    libxext6 \
+    libxrender-dev \
+    libgomp1 \
+    && rm -rf /var/lib/apt/lists/*
+
+# Set working directory
 WORKDIR /app
 
-# 3. Copy and install Python dependencies
+# Copy requirements first for better caching
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
 
-# 4. Copy application code
+# Install Python dependencies with PyTorch CPU version for smaller image
+RUN pip install --no-cache-dir torch torchvision --index-url https://download.pytorch.org/whl/cpu && \
+    pip install --no-cache-dir -r requirements.txt
+
+# Copy application code
 COPY . .
 
-# 5. Set Python path to include the app directory
+# Set Python path
 ENV PYTHONPATH=/app
 
-# 6. Expose FastAPI port
+# Expose FastAPI port
 EXPOSE 3001
 
-# 7. Start the Uvicorn server
+# Start the Uvicorn server
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "3001"]
