--- a/lighthouse-service/package.json
+++ b/lighthouse-service/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "chrome-launcher": "^1.2.0",
-    "express": "^5.1.0",
-    "lighthouse": "^12.8.1"
+    "express": "^4.18.2",
+    "lighthouse": "^12.8.1",
+    "qs": "^6.14.0"
   }
 }
